# CactusReplit

./: .env-devconsole  .gitignore  .replit  CACTUS_WEALTH_RESUMEN_ULTRA_COMPLETO.md  CactusDashboard.md  DOCKER_DEPENDENCY_FIX.md  README.md  README_REPLIT.md  REPLIT_AGENT_SETUP.md  deploy-log.txt  docker-compose.sync.yml  docker-compose.yml  package-lock.json  package.json  rebuild-frontend.sh  replit.md  replit.nix  resume.md  start.sh
.cursor/: last_run.json  mcp.json
.cursor/memory/: productContext.md  projectbrief.md  systemPatterns.md  techContext.md
.cursor/rules/: README.mdc  api-patterns.mdc  cactus-wealth-comprehensive.mdc  cactus-wealth-core.mdc  cactusdashboard-architecture.mdc  fintech-security.mdc  high-quality-tools.mdc  no-magic-numbers.mdc  perf-budgets.mdc  secure-coding.mdc  token-optimization.mdc  ui-ux-patterns.mdc
alembic/versions/: df8742beda74_initial_schema_all_models_explicit_.py
attached_assets/: Pasted--cactus-wealth-frontend-0-1-0-prepare-husky-up-to-date-audited-890-packages-in-4s-214-package-1753312598643_1753312598644.txt
cactus-wealth-backend/: .dockerignore  .env.example  .gitignore  .requirements.hash  Dockerfile  README.md  alembic.ini  create_demo_user.py  create_test_data.py  create_test_notifications.py  entrypoint.sh  entrypoint_worker.sh  main.py  pyproject.toml  requirements.txt  run_tests.py  seed_historical_data.py  test_report_generation.py
cactus-wealth-backend/alembic/: env.py
cactus-wealth-backend/alembic/versions/: 58d624fc362f_add_report_model.py  5be037e90934_add_portfolio_name_to_clients.py  65819414d634_add_notification_model.py  6fa6c6685080_add_username_to_users.py  8fed73f9da88_add_portfoliosnapshot_table.py  add_model_portfolio_functionality.py  d563441ca0de_add_sector_field_to_asset_model.py  db8ea4bed50c_initial_migration_create_users_table.py  e0b602d1ae2f_initial_schema_all_models_explicit_.py  e84388e79158_create_advanced_crm_models_with_.py  ed1b32c54319_create_all_tables.py
cactus-wealth-backend/src/cactus_wealth/: __init__.py  client_event_bus.py  crud.py  database.py  email_actions.py  models.py  schemas.py  security.py  services.py  worker.py
cactus-wealth-backend/src/cactus_wealth/api/: __init__.py
cactus-wealth-backend/src/cactus_wealth/api/v1/: __init__.py  api.py
cactus-wealth-backend/src/cactus_wealth/api/v1/endpoints/: __init__.py  assets.py  automations.py  clients.py  dashboard.py  health.py  insurance_policies.py  investment_accounts.py  login.py  model_portfolios.py  notifications.py  portfolios.py  reports.py  users.py  websockets.py
cactus-wealth-backend/src/cactus_wealth/core/: __init__.py  arq.py  config.py  dataprovider.py  logging_config.py  middleware.py  websocket_manager.py
cactus-wealth-backend/src/cactus_wealth/repositories/: __init__.py  asset_repository.py  base_repository.py  client_repository.py  notification_repository.py  portfolio_repository.py  user_repository.py
cactus-wealth-backend/src/cactus_wealth/templates/: report.html  styles.css
cactus-wealth-backend/tests/: __init__.py  conftest.py  test_health_endpoint.py
cactus-wealth-backend/tests/api/v1/: __init__.py  test_crm_products_api.py  test_dashboard_api.py
cactus-wealth-backend/tests/health/: __init__.py  test_health_endpoint.py
cactus-wealth-backend/tests/integration/: __init__.py  test_api_endpoints.py
cactus-wealth-backend/tests/services/: __init__.py  test_portfolio_service.py  test_report_service.py
cactus-wealth-backend/tests/test_repositories/: __init__.py  test_client_repository.py  test_portfolio_repository.py
cactus-wealth-backend/tests/webhooks/: __init__.py  test_client_webhooks.py
cactus-wealth-frontend/: .dockerignore  .prettierrc.json  Dockerfile  Dockerfile.dev  README.md  README_AUTH_REFACTOR.md  jest.config.js  jest.env.js  jest.setup.js  next.config.js  package-lock 2.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-lint-staged.tsx  test-quality-demo.ts  test-runner.js
cactus-wealth-frontend/.husky/: pre-commit
cactus-wealth-frontend/app/: globals.css  layout.tsx  page.tsx
cactus-wealth-frontend/components/: ClientRoot.tsx  fonts.ts
cactus-wealth-frontend/context/: AuthContext.tsx  ClientContext.tsx
cactus-wealth-frontend/e2e/: auth.spec.ts  client-kanban.spec.ts  global-setup.ts  global-teardown.ts
cactus-wealth-frontend/hooks/: useClientDetailPage.ts  useDashboardActions.ts  useHistoricalPerformanceChart.ts  (+3 more)
docs/: AUTO_COMMANDS.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  OPTIMIZED_LOCAL_DEV.md  QUALITY_CHECK_OPTIMIZATION.md  QUALITY_SYSTEM_COMPLETE.md  README.md  SCRIPT_OPTIMIZATION_GUIDE.md  TESTING_SYSTEM.md  TESTING_SYSTEM_SUMMARY.md
scripts/: .txt  README.md  cactus.sh  git-force-push.sh  verify-replit-setup.sh
(+179 files in other folders)
