[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus-wealth-backend"
version = "1.0.0"
description = "CactusDashboard Backend API"
authors = [{name = "CactusDashboard Team"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlmodel==0.0.14",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.7",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "redis==5.0.1",
    "httpx==0.25.0",
    "pydantic==2.4.2",
    "structlog==23.2.0",
    "arq==0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
